23.0.1/Solution Exports/OpenShift/roundcube-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcubenginx
  labels:
    service: roundcubenginx
spec:
  replicas: 1
  selector:
    matchLabels:
      service: roundcubenginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: roundcubenginx
    spec:
      containers:
      - name: roundcubenginx
        image: nginx:alpine
        imagePullPolicy: ""
        ports:
        - containerPort: 80
        volumeMounts:
        - name: www-data
          mountPath: /var/www/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      restartPolicy: Always
      serviceAccountName: "default"
      volumes:
      - name: www-data
        persistentVolumeClaim:
          claimName: roundcubemail-www-pvc
      - name: nginx-config
        configMap:
          name: roundcubenginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: roundcubenginx
  labels:
    service: roundcubenginx
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 80
  selector:
    service: roundcubenginx
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: roundcubenginx
  name: roundcubenginx
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: roundcubenginx
    weight: 100
  wildcardPolicy: None
